--- a/package.json
+++ b/package.json
@@ -7,16 +7,19 @@
     "build": "npx tsc",
     "start": "node dist/index.js",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
-    "test": "jest"
+    "test": "jest --watch"
   },
   "author": "Stephen Donahue",
   "license": "ISC",
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.4",
     "@types/node": "^20.5.9",
     "concurrently": "^8.2.1",
+    "jest": "^29.6.4",
     "nodemon": "^3.0.1",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.2.2"
   },
   "dependencies": {
